--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "test:watch": "echo \"No tests specified yet\"",
     "preview": "next build && next start",
     "analyze": "ANALYZE=true next build",
-    "clean": "rm -rf .next out node_modules/.cache",
-    "postinstall": "husky install"
+    "clean": "rm -rf .next out node_modules/.cache"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
